# AlienFx-DellG15-5515-v2

./: .gitignore  README.md  makefile
extra/: AlienFx.desktop
oldSrc/: AlienFX_SDK.h  LightFX.h  PayloadAgregation.h  PayloadBuilder.h  README.md  USBDeviceHandler.h  a.cpp  main  main.cpp  t.cpp
src/: AlienFx_SDK.h  CMakeLists.txt  LightFX.h  PayloadAgregation.h  PayloadBuilder.h  USBDeviceHandler.h  gui  gui.cpp  layout.glade  layout.glade~  main  main.cpp
